--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
         <!--Logotipo-->
         <div class="header-logo">
-            <a href="#"><img src="./assets/img/Gold Luxury Initial Circle Logo.png" alt=""></a>
+            <a href="#"><img src="./assets/img catalogo/Purple_Luxury_Initial_Circle_Logo-removebg.png" alt=""></a>
         </div>
     </header>
 
@@ -76,32 +76,90 @@
     </div>
     <!--Fim container fluid-->
 
-    <!--Produtos-->
+    <!--Produtos novidades-->
     <div class="produtos-titulo"><h1>Novidades</h1></div>
     <div class="cards">
         <div class="card" style="width: 18rem;">
-            <a href="#"><img class="card-img-top" src="./assets/img/1.webp" alt="Imagem de capa do card"></a>
+            <a href="#"><img class="card-img-top" src="./assets/img catalogo/macaquinho em suede.png" alt="Imagem de capa do card"></a>
             <div class="card-body">
-                <p class="card-text">card 1.</p>
+                <p class="card-text"><strong>Macaquito em Suede</strong></p>
+                <p>R$ 45</p>
+                <p>Tam. GG</p>
             </div>
+            <button type="button" class="btn btn-light">Comprar</button>
         </div>
         <div class="card" style="width: 18rem;">
-            <a href=""><img class="card-img-top" src="./assets/img/4.webp" alt="Imagem de capa do card"></a>
+            <a href=""><img class="card-img-top" src="./assets/img catalogo/calcinha modeladora.png" alt="Imagem de capa do card"></a>
             <div class="card-body">
-                <p class="card-text">card 2.</p>
+                <p class="card-text"><strong>Calcinha modeladora</strong></p>
+                <p>R$ 20</p>
+                <p>Tam. M / G</p>
             </div>
+            <button type="button" class="btn btn-light">Comprar</button>
         </div>
         <div class="card" style="width: 18rem;">
-            <a href=""><img class="card-img-top" src="./assets/img/7.webp" alt="Imagem de capa do card"></a>
+            <a href=""><img class="card-img-top" src="./assets/img catalogo/Baby Doll Malha fria.png" alt="Imagem de capa do card"></a><br><br>
             <div class="card-body">
-                <p class="card-text">card 3.</p>
+                <p class="card-text"><strong>Baby Doll Malha fria</strong></p>
+                <p>R$ 30</p>
+                <p>Tam. GG</p>
             </div>
+            <button type="button" class="btn btn-light">Comprar</button>
         </div>
         <div class="card" style="width: 18rem;">
-            <a href=""><img class="card-img-top" src="./assets/img/9.webp" alt="Imagem de capa do card"></a>
+            <a href=""><img class="card-img-top" src="./assets/img catalogo/baby doll algodao.png" alt="Imagem de capa do card"></a><br>
             <div class="card-body">
-                <p class="card-text">card 4.</p>
+                <p class="card-text"><strong>Baby Doll Algodão</strong></p>
+                <p>R$ 35</p>
+                <p>Tam. M / G</p>
             </div>
+            <button type="button" class="btn btn-light">Comprar</button>
+        </div>
+    </div>
+    <!--produtos best sellers-->
+    <div class="produtos-titulo">
+        <h1>Mais Vendidos</h1>
+    </div>
+    <div class="cards">
+        <div class="card" style="width: 18rem;">
+            <a href=""><img class="card-img-top" src="./assets/img catalogo/lingerie semi fio.jpg"
+                    alt="Imagem de capa do card"></a><br>
+            <div class="card-body">
+                <p class="card-text"><strong>Lingerie Semi fio Purple</strong></p>
+                <p>R$ 40</p>
+                <p>Tam. M / G</p>
+            </div>
+            <button type="button" class="btn btn-light">Comprar</button>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <a href=""><img class="card-img-top" src="./assets/img catalogo/lingerie.jpg"
+                    alt="Imagem de capa do card"></a><br>
+            <div class="card-body">
+                <p class="card-text"><strong>Conjunto Lingerie</strong></p>
+                <p>R$ 35</p>
+                <p>Tam. M / G</p>
+            </div>
+            <button type="button" class="btn btn-light">Comprar</button>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <a href=""><img class="card-img-top" src="./assets/img catalogo/lingerie semi fio azul.jpg"
+                    alt="Imagem de capa do card"></a><br>
+            <div class="card-body">
+                <p class="card-text"><strong>Lingerie Semi fio Azul</strong></p>
+                <p>R$ 40</p>
+                <p>Tam. M / G</p>
+            </div>
+            <button type="button" class="btn btn-light">Comprar</button>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <a href=""><img class="card-img-top" src="./assets/img catalogo/lingerie semi fio red.jpg"
+                    alt="Imagem de capa do card"></a><br>
+            <div class="card-body">
+                <p class="card-text"><strong>Lingerie Semi fio Vinho</strong></p>
+                <p>R$ 40</p>
+                <p>Tam. M / G</p>
+            </div>
+            <button type="button" class="btn btn-light">Comprar</button>
         </div>
     </div>
         
@@ -115,5 +173,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-</body>
+</body><br>
+<footer>
+    <div class="rodape">
+        <h3>&copy; Copyright - Todos os direitos reservados. NB Doll 2023</h3>
+    </div>
+</footer>
 </html>
